# triangle

./: CMakeLists.txt  triangle.c
